@@ -55,7 +55,19 @@ sub render_value
 			$nolink );
 	}
 
-	my $table = $session->make_element( "table", border=>1 );
+	my $table = $session->make_element( "table", border=>1, cellspacing=>0, cellpadding=>2 );
+	my $tr = $session->make_element( "tr" );
+	$table->appendChild( $tr );
+	my $f = $self->get_property( "fields" );
+	foreach my $field_conf ( @{$f} )
+	{
+		my $fn = $field_conf->{name};
+		my $field = $self->{dataset}->get_field( $fn );
+		my $th = $session->make_element( "th" );
+		$tr->appendChild( $th );
+		$th->appendChild( $field->render_name( $session ) );
+	}
+
 	foreach my $row ( @{$value} )
 	{
 		$table->appendChild( $self->render_single_value_row( $session, $row, $object ) );
@@ -71,13 +83,19 @@ sub render_single_value_row
 
 	if( !defined $object ) { EPrints::abort( "Object not defined in Metafield Compound render_single_value_row!" ); }
 
+	my %fn_to_as = $self->get_fieldname_to_as;
 	my $tr = $session->make_element( "tr" );
-	foreach my $part_id ( sort keys %{$f} )
+	foreach my $field_conf ( @{$f} )
 	{
+		my $name = $field_conf->{name};
 		my $td = $session->make_element( "td" );
 		$tr->appendChild( $td );
-		my $field = $object->get_dataset->get_field( $f->{$part_id} );
-		$td->appendChild( $field->render_single_value( $session, $value->{$part_id}, $object ) );
+		my $field = $object->get_dataset->get_field( $name );
+		$td->appendChild( 
+			$field->render_single_value( 
+				$session, 
+				$value->{$fn_to_as{$name}}, 
+				$object ) );
 	}
 
 	return $tr;
@@ -107,6 +125,46 @@ sub get_sql_type
 	return undef;
 }
 
+sub get_as_to_fieldname
+{
+	my( $self ) = @_;
+
+	my %addr = ();
+	my %rev = ();
+	foreach my $as ( keys %{$self->{addressing}} )
+	{
+		next unless defined $as;
+		my $v = $self->{addressing}->{$as};
+		next unless defined $v;
+	
+		$addr{$as} = $v;
+		$rev{$v} = $as;
+	}
+
+	my $f = $self->get_property( "fields" );
+	foreach my $sub_field ( @{$f} )
+	{
+		if( !defined $rev{$sub_field->{name}} )
+		{
+			$addr{$sub_field->{name}} = $sub_field->{name};
+		}
+	}
+
+	return %addr;
+}
+
+sub get_fieldname_to_as
+{
+	my( $self ) = @_;
+
+	my %addr = $self->get_as_to_fieldname;
+	my %raddr = ();
+	foreach( keys %addr )
+	{
+		$raddr{$addr{$_}} = $_;
+	}
+	return %raddr;
+}
 
 # Get the value of this field from the object. In this case this
 # is quite complicated.
@@ -114,11 +172,11 @@ sub get_value
 {
 	my( $self, $object ) = @_;
 
-	my $f = $self->get_property( "fields" );
 	my $values = {};
-	foreach my $part_id ( keys %{$f} )
+	my %as_to_fn = $self->get_as_to_fieldname;
+	foreach my $as ( keys %as_to_fn )
 	{
-		$values->{$part_id} = $object->get_value_raw( $f->{$part_id} );
+		$values->{$as} = $object->get_value_raw( $as_to_fn{$as} );
 	}
 
 	if( !$self->get_property( "multiple" ) )
@@ -128,13 +186,13 @@ sub get_value
 
 	my $lists = {};
 	my $len = 0;
-	foreach my $part_id ( keys %{$f} )
+	foreach my $as ( keys %as_to_fn )
 	{
-		$lists->{$part_id} = [];
-		next unless defined $values->{$part_id};
-		if( scalar @{$values->{$part_id}} > $len )
+		$lists->{$as} = [];
+		next unless defined $values->{$as};
+		if( scalar @{$values->{$as}} > $len )
 		{
-			$len = scalar @{$values->{$part_id}};
+			$len = scalar @{$values->{$as}};
 		}
 	}
 
@@ -142,11 +200,11 @@ sub get_value
 	for( my $i=0; $i<$len; ++$i )
 	{
 		my $v = {};
-		foreach my $part_id ( keys %{$f} )
+		foreach my $as ( keys %as_to_fn )
 		{
-			next if( !defined $values->{$part_id} );
-			next if( !defined $values->{$part_id}->[$i] );
-			$v->{$part_id} = $values->{$part_id}->[$i];
+			next if( !defined $values->{$as} );
+			next if( !defined $values->{$as}->[$i] );
+			$v->{$as} = $values->{$as}->[$i];
 		}
 		push @{$list}, $v;
 	}
@@ -159,24 +217,49 @@ sub set_value
 {
 	my( $self, $object, $value ) = @_;
 
+	my %as_to_fn = $self->get_as_to_fieldname;
+	my %fn_to_as = $self->get_fieldname_to_as;
 	my $f = $self->get_property( "fields" );
 	my $values = {};
-	foreach my $part_id ( keys %{$f} )
+	foreach my $as ( keys %as_to_fn )
 	{
-		$values->{$part_id} = [];
+		$values->{$as} = [];
 	}
 	foreach my $row ( @{$value} )
 	{
-		foreach my $part_id ( keys %{$f} )
+		foreach my $as ( keys %as_to_fn )
 		{
-			push @{$values->{$part_id}}, $row->{$part_id};
+			push @{$values->{$as_to_fn{$as}}}, $row->{$as};
 		}
 	}
-	foreach my $part_id ( keys %{$f} )
+	foreach my $fn ( keys %fn_to_as )
 	{
-		my $field = $object->get_dataset->get_field( $f->{$part_id} );
-		$field->set_value( $object, $values->{$part_id} );
+		my $field = $object->get_dataset->get_field( $fn );
+		$field->set_value( $object, $values->{$fn} );
 	}
+}
+
+sub get_input_col_titles
+{
+	my( $self, $session, $staff ) = @_;
+
+	my @r  = ();
+	my $f = $self->get_property( "fields" );
+	foreach my $field_conf ( @{$f} )
+	{
+		my $fn = $field_conf->{name};
+		my $field = $self->{dataset}->get_field( $fn );
+		my $sub_r = $field->get_input_col_titles( $session, $staff );
+
+		if( !defined $sub_r )
+		{
+			$sub_r = [ $field->render_name( $session ) ];
+		}
+
+		push @r, @{$sub_r};
+	}
+	
+	return \@r;
 }
 
 # assumes all basic input elements are 1 high, x wide.
@@ -189,10 +272,17 @@ sub get_basic_input_elements
 	my $f = $self->get_property( "fields" );
 	my $grid_row = [];
 
-	foreach my $part_id ( keys %{$f} )
+	my %fn_to_as = $self->get_fieldname_to_as;
+	foreach my $field_conf ( @{$f} )
 	{
-		my $field = $object->get_dataset->get_field( $f->{$part_id} );
-		my $part_grid = $field->get_basic_input_elements( $session, $value->{$part_id}, $basename, $staff, $object );
+		my $fn = $field_conf->{name};
+		my $field = $object->get_dataset->get_field( $fn );
+		my $part_grid = $field->get_basic_input_elements( 
+					$session, 
+					$value->{$fn_to_as{$fn}}, 
+					$basename, 
+					$staff, 
+					$object );
 		my $top_row = $part_grid->[0];
 		push @{$grid_row}, @{$top_row};
 	}
@@ -209,11 +299,13 @@ sub form_value_basic
 	my $value = {};
 
 	my $f = $self->get_property( "fields" );
-	foreach my $part_id ( keys %{$f} )
+	my %fn_to_as = $self->get_fieldname_to_as;
+	foreach my $field_conf ( @{$f} )
 	{
-		my $field = $object->get_dataset->get_field( $f->{$part_id} );
+		my $fn = $field_conf->{name};
+		my $field = $object->get_dataset->get_field( $fn );
 		my $v = $field->form_value_basic( $session, $basename, $object );
-		$value->{$part_id} = $v;
+		$value->{$fn_to_as{$fn}} = $v;
 	}
 
 	return undef if( !EPrints::Utils::is_set( $value ) );
@@ -241,6 +333,7 @@ sub get_property_defaults
 	my( $self ) = @_;
 	my %defaults = $self->SUPER::get_property_defaults;
 	$defaults{fields} = $EPrints::MetaField::REQUIRED;
+	$defaults{addressing} = {};
 	$defaults{export_as_xml} = 0;
 	$defaults{text_index} = 0;
 	return %defaults;
