@@ -141,10 +141,10 @@ sub add_problems
 	foreach my $problem_xhtml ( @problems )
 	{
 		my $li = $self->{session}->make_element( "li" );
-		$li->appendChild( $problem_xhtml, $self->{staff} );
+		$li->appendChild( $problem_xhtml );
 		$warnings->appendChild( $li );
 	}
-	$self->workflow->link_problem_xhtml( $warnings );
+	$self->workflow->link_problem_xhtml( $warnings, $self->{staff} );
 	$self->{processor}->add_message( "warning", $warnings );
 }
 
