@@ -56,6 +56,8 @@ $EPrints::SystemSettings::conf =
 	disable_df => 1,
 	show_ids_in_log => 0,
 	enable_gdome => 1,
+	file_perms => 0664,
+	dir_perms => 02775,
 
 };
 
